--- a/Week-1/Rendering-Templates/challenges/templates/challenges/challenge.html
+++ b/Week-1/Rendering-Templates/challenges/templates/challenges/challenge.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>{{ month }} Challenge</title>
   </head>
   <body>
-    <h1>The monthly challenge is</h1>
-    <h2>Go for a walk..</h2>
+    <h1>The {{month}} challenge is</h1>
+    <h2>{{ text }}</h2>
   </body>
 </html>
