--- a/Week-1/Template-Inheritance/challenges/templates/challenges/index.html
+++ b/Week-1/Template-Inheritance/challenges/templates/challenges/index.html
@@ -1,21 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>All Challenges</title>
-  </head>
-  <body>
-    <ul>
-      {% for month in months %}
-      <!--the for tag for looping through months -->
-      <li>
-        <!--url tag for dynamic urls-->
-        <a href="{% url 'month-challenge' month %}"
-          >{{ month | title }}<!--variable interpolation--></a
-        >
-      </li>
-      {% endfor %}
-    </ul>
-  </body>
-</html>
+{% extends "base.html" %}
+<!--template inheritance from base.html-->
+
+{% block page_title %}All Challenges{% endblock %}
+<!--block tag for injecting content into the base code-->
+
+{% block content %}
+<ul>
+  {% for month in months %}
+  <!--the for tag for looping through months -->
+  <li>
+    <!--url tag for dynamic urls-->
+    <a href="{% url 'month-challenge' month %}"
+      >{{ month | title }}<!--variable interpolation--></a
+    >
+  </li>
+  {% endfor %}
+</ul>
+{% endblock %}
