--- a/Week-1/Template-Inheritance/challenges/templates/challenges/index.html
+++ b/Week-1/Template-Inheritance/challenges/templates/challenges/index.html
@@ -1,10 +1,17 @@
 {% extends "base.html" %}
 <!--template inheritance from base.html-->
 
-{% block page_title %}All Challenges{% endblock %}
-<!--block tag for injecting content into the base code-->
+{% block page_title %}
+  All Challenges
+  <!--block tag for injecting content into the base code-->
+  
+{% endblock %} 
 
-{% block content %}
+{% block content %} 
+
+  {% include "challenges/includes/header.html" with active_page="index" %}
+  <!--includes the partial template snippets-->
+
 <ul>
   {% for month in months %}
   <!--the for tag for looping through months -->
