--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,20 +1,53 @@
-{% extends "base.html" %} {% block page_title %}Latest Blog Posts{% endblock %}
-{% block content %}
-<h1>Welcome to Karan Bista's Blog!</h1>
-<p>
-  Hi there! I'm Karan Bista, and I'm thrilled to have you here. This blog is a
-  space where I share my thoughts, ideas, and insights on topics I'm passionate
-  about. Whether it's tech, creativity, or exploring new challenges, there's
-  always something exciting happening here. Feel free to explore, comment, and
-  connect—this blog is as much about sharing as it is about learning together.
-  Thanks for stopping by, and I hope you enjoy your time here!
-</p>
+{% extends "base.html" %}  <!--inherits from base.html-->
+{% load static %}
 
-<ul>
-  {% for post in post_list %}
-  <li>
-    <a href="">{{ post | title }}</a>
-  </li>
-  {% endfor %}
-</ul>
+{% block page_title %}
+ My Blog 
+{% endblock %}  <!--injects title to the page-->
+
+{% block css_files %}
+ <link rel="stylesheet" href="{% static 'blog/index.css' %}" > 
+{% endblock %}  <!-- injects this css to the starting page with base template -->
+
+
+{% block content %}   <!--injects body to the page-->
+
+    <header id="main-navigation">    <!-- Navigatory section to navigate throughout the blogsite -->
+        <h1><a href="">Karan' Blog</a></h1>
+        <nav>
+            <a href="">All posts</a>
+        </nav>
+    </header>
+    <section id="welcome">   <!-- welcome section for the introductory part -->
+        <header>
+            <img src="" alt="Karan - The Author Of This Blog!" />
+            <h2>KARAN'S BLOG</h2>
+        </header>
+        <p>Hi there! I'm Karan Bista, and I'm thrilled to have you here. This blog is a space where I share my thoughts, ideas, and insights on topics I'm passionate about. Whether it's tech, creativity, or exploring new challenges, there's always something exciting happening here.
+        Feel free to explore, comment, and connect—this blog is as much about sharing as it is about learning together. Thanks for stopping by, and I hope you enjoy your time here!</p>
+    </section>
+    
+    <section id="latest-posts"> <!-- latest posts section to handle latest post by order -->
+        <h2>My Latest Thoughts</h2>
+        <ul>
+            <li>
+                <article>
+                    <a href="">
+                        <img src="" alt="Mountain Hiking">
+                        <div>
+                            <h3>Mountain Hiking></h3>
+                            <p>There's nothing like the views in the himalayas with all the highest peaks smiling at you at once. With those snowcapped mountains it feels like heaven to look at the sunrise</p>
+                        </div>
+                    </a>
+                </article>    
+            </li>    
+        </ul>
+    </section>
+
+    <section id="About">
+        <p>I am a passionate developer exploring the world of web development and AI. With skills in HTML, CSS, JavaScript, and Python, I’m currently mastering Django while building exciting projects</p>
+        <p>My goal is to keep on growing as a developer - And if I could help you in anyway possible, I'd be more than happy!</p>
+    </section>
+
+    
 {% endblock %}
