add styling in index.html

--- a/Week-3/My_blogsite/blog/templates/blog/index.html
+++ b/Week-3/My_blogsite/blog/templates/blog/index.html
@@ -20,7 +20,7 @@
     </header>
     <section id="welcome">   <!-- welcome section for the introductory part -->
         <header>
-            <img src="" alt="Karan - The Author Of This Blog!" />
+            <img src="{% static 'blog/images/karan.jpg' %}" alt="Karan - The Author Of This Blog!" />
             <h2>KARAN'S BLOG</h2>
         </header>
         <p>Hi there! I'm Karan Bista, and I'm thrilled to have you here. This blog is a space where I share my thoughts, ideas, and insights on topics I'm passionate about. Whether it's tech, creativity, or exploring new challenges, there's always something exciting happening here.
@@ -33,7 +33,7 @@
             <li>
                 <article>
                     <a href="">
-                        <img src="" alt="Mountain Hiking">
+                        <img src="{% static 'blog/images/mountain.jpg' %}" alt="Mountain Hiking"  style="width: 120px; height: 120px; border-radius: 50%; object-fit: cover; display: block;">
                         <div>
                             <h3>Mountain Hiking></h3>
                             <p>There's nothing like the views in the himalayas with all the highest peaks smiling at you at once. With those snowcapped mountains it feels like heaven to look at the sunrise</p>
@@ -44,7 +44,7 @@
         </ul>
     </section>
 
-    <section id="About">
+    <section id="about">
         <p>I am a passionate developer exploring the world of web development and AI. With skills in HTML, CSS, JavaScript, and Python, I’m currently mastering Django while building exciting projects</p>
         <p>My goal is to keep on growing as a developer - And if I could help you in anyway possible, I'd be more than happy!</p>
     </section>
