--- a/Week-3/My_blogsite/templates/base.html
+++ b/Week-3/My_blogsite/templates/base.html
@@ -10,6 +10,12 @@
     {% block css_files %} {% endblock %}
   </head>
   <body>
+    <header id="main-navigation">    <!-- Navigatory section to navigate throughout the blogsite -->
+      <h1><a href="">Karan' Blog</a></h1>
+      <nav>
+          <a href="">All posts</a>
+      </nav>
+  </header>
     {% block content %} {% endblock content %}
   </body>
 </html>
