update link to pages

--- a/Week-3/My_blogsite/blog/templates/blog/includes/post.html
+++ b/Week-3/My_blogsite/blog/templates/blog/includes/post.html
@@ -2,7 +2,7 @@
 
 <li>
   <article class="post">
-    <a href="">
+    <a href="{% url 'post-detail-page' 'mountains' %}">
       <img
         src="{% static 'blog/images/mountain.jpg' %}"
         alt="Mountain Hiking"
