--- a/Week-3/My_blogsite/templates/base.html
+++ b/Week-3/My_blogsite/templates/base.html
@@ -11,9 +11,9 @@
   </head>
   <body>
     <header id="main-navigation">    <!-- Navigatory section to navigate throughout the blogsite -->
-      <h1><a href="">Karan' Blog</a></h1>
+      <h1><a href="{% url 'starting-page' %}">Karan' Blog</a></h1>
       <nav>
-          <a href="">All posts</a>
+          <a href="{% url 'posts-page' %}">All posts</a>
       </nav>
   </header>
     {% block content %} {% endblock content %}
