add dynamic templates and syntax

--- a/Week-3/My_blogsite/blog/templates/blog/index.html
+++ b/Week-3/My_blogsite/blog/templates/blog/index.html
@@ -24,7 +24,9 @@
     <section id="latest-posts"> <!-- latest posts section to handle latest post by order -->
         <h2>My Latest Thoughts</h2>
         <ul>
-            {% include 'blog/includes/post.html' %}    
+            {% for post in posts %}
+                {% include 'blog/includes/post.html' %} 
+            {% endfor %}
         </ul>
     </section>
 
