--- a/Week-3/My_blogsite/blog/templates/blog/post-detail.html
+++ b/Week-3/My_blogsite/blog/templates/blog/post-detail.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block page_title %}
-    This Post Title
+    {{ post.title }}
 {% endblock %}  <!--injects title to the page-->
 
 {% block css_files %}
@@ -14,19 +14,15 @@
 {% block content %} 
 
 <section id="summary">
-    <h2>Post Title</h2>
+    <h2>{{ post.title }}</h2>
     <article>
-        <img src="{% static 'blog/images/mountain.jpg' %}" alt="Post Title">
-        <address>By Karan</address>
-        <div>Last Updated on <time>July 10th</time></div>
+        <img src="{% static 'blog/images/'|add:post.image %}" alt="{{ post.title }}">
+        <address>{{ post.author }}</address>
+        <div>Last Updated on <time>{{ post.date|date:"d M Y" }}</time></div>
     </article>
 
     <main>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque suscipit modi fuga consequatur voluptatem. Esse, vero mollitia perspiciatis quidem laboriosam ad minima tenetur! Exercitationem, doloremque? Nemo soluta ab sed neque.
-        </p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, optio exercitationem. In dolores voluptatum suscipit ab laboriosam molestias totam similique odio officia minus. Beatae cupiditate culpa velit est veritatis ratione.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi tenetur quod vel laborum temporibus reiciendis magni velit illum voluptates, eum porro, sapiente adipisci animi facere deleniti unde dolore nam illo!</p>
+        {{ post.content| linebreaks }}
     </main>
 </section>
 
