--- a/Week-2/Book_Store/book_outlet/templates/book_outlet/index.html
+++ b/Week-2/Book_Store/book_outlet/templates/book_outlet/index.html
@@ -8,7 +8,7 @@
 <ul>
     {% for book in books %}
     <li>
-    {{ book.title }} (Rating: {{ book.rating }}) 
+    <a href="{{ book.get_absolute_url }}">{{ book.title }}</a> (Rating: {{ book.rating }}) 
     </li>
     {% endfor %}
 </ul>
