update slugs and fieldrelations

--- a/Week-2/Book_Store/book_outlet/templates/book_outlet/index.html
+++ b/Week-2/Book_Store/book_outlet/templates/book_outlet/index.html
@@ -5,11 +5,18 @@
 {% endblock %}
 
 {% block content %}
-<ul>
-    {% for book in books %}
-    <li>
-    <a href="{{ book.get_absolute_url }}">{{ book.title }}</a> (Rating: {{ book.rating }}) 
-    </li>
-    {% endfor %}
-</ul>
+  <ul>
+      {% for book in books %}
+      <li>
+      <a href="{{ book.get_absolute_url }}">{{ book.title }}</a> (Rating: {{ book.rating }}) 
+      </li>
+      {% endfor %}
+  </ul>
+
+  <hr>
+  
+    <p>Total Number Of Books: {{ num_books }}</p>
+    <p>Average Rating: {{ avg_rating.rating__avg }}</p>
+
+
 {% endblock %}
