--- a/Week-4/django_form_class/reviews/templates/reviews/thankyou.html
+++ b/Week-4/django_form_class/reviews/templates/reviews/thankyou.html
@@ -3,13 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your review</title>
+    <title>Thank You!</title>
 </head>
 <body>
-    <form action="/" method="post" >
-        {% csrf_token %}
-        {{ form }}
-        <button>Send</button>
-    </form>
+    <h1>Thank You!</h1>
 </body>
 </html>
